<resources>
    <string name="app_name">Algorand Carpooling</string>
    <string name="activity_trip">Trip</string>
    <string name="activity_create_trip">Create Trip</string>
    <string name="activity_update_trip">Update Trip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Algorand Carpooling</string>
    <string name="nav_header_subtitle">Demo Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_trips_created">Created Trips</string>
    <string name="menu_trips_joined">Joined Trips</string>
    <string name="menu_account">Account</string>

    <string name="total_balance">Total Balance</string>
    <string name="account_mnemonic">Account Mnemonic</string>
    <string name="account_address">Account Address</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="join">Join Trip</string>
    <string name="leave">Leave Trip</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Trip list labels -->
    <string name="available_trips_label">List of available trips:</string>
    <string name="created_trips_label">List of your trips:</string>
    <string name="joined_trips_label">List of the joined trips:</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="menu_trips_create">Create Trip</string>
    <string name="insert_trip_data">Insert Trip Data</string>
    <string name="your_trips">Your Trips</string>
    <string name="end_trip">End Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="create_dummy_trip">Create dummy trip</string>

    <!-- Trip Status Strings -->
    <string name="status_available">Available</string>
    <string name="status_full">Full</string>
    <string name="status_started">Started</string>
    <string name="status_finished">Finished</string>
    <string name="status_joined">Joined</string>
    <string name="status_edit">Edit</string>
    <string name="status_unknown">Unknown Status</string>

    <!-- Trip View Strings -->
    <string name="trip">Trip:</string>
    <string name="trip_title">Title</string>
    <string name="creator_name">Insert a Name</string>
    <string name="creator_name_label">Creator Name:</string>
    <string name="address">Address</string>
    <string name="start_address">Insert an Address</string>
    <string name="start_address_label">Departure Address:</string>
    <string name="end_address">Insert an Address</string>
    <string name="end_address_label">Arrival Address:</string>
    <string name="date">yyyy-mm-dd</string>
    <string name="start_date_label">Departure Date:</string>
    <string name="time">hh:mm</string>
    <string name="start_time_label">Departure Time:</string>
    <string name="end_date_label">Arrival Date:</string>
    <string name="end_time_label">Arrival Time:</string>
    <string name="trip_cost_label">Trip Cost (unitary):</string>
    <string name="trip_cost">0 MicroAlgo</string>
    <string name="available_seats">0 / 4 Seats</string>
    <string name="max_seats_label">Max Seats:</string>
    <string name="available_seats_label">Available Seats:</string>
    <string name="availability_label">Availability:</string>
    <string name="trip_status_label">Trip Status:</string>
    <string name="trip_status">Trip Status</string>
    <string name="participants_label">Participants:</string>
    <string name="participants">0 / 4 Participants</string>

    <string name="microalgo">MicroAlgo</string>
    <string name="date_example">2022–05–10 15:00</string>
    <string name="cost_example">5000</string>
    <string name="number_example">0</string>
    <string name="close">Close</string>
</resources>