<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trips_created"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_trips_created" />

        <item
            android:id="@+id/nav_trips_joined"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_trips_joined" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
    </group>
</menu>