<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.algorandcarsharing.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trips_created"
        android:name="com.example.algorandcarsharing.fragments.trips.created.TripsFragment"
        android:label="@string/menu_trips_created"
        tools:layout="@layout/fragment_trips_created" />

    <fragment
        android:id="@+id/nav_trips_joined"
        android:name="com.example.algorandcarsharing.fragments.trips.joined.TripsFragment"
        android:label="@string/menu_trips_joined"
        tools:layout="@layout/fragment_trips_joined" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.algorandcarsharing.fragments.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>