<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_md"
    tools:context=".activities.TripActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_md">

            <FrameLayout
                android:id="@+id/card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageButton
                    android:id="@+id/close_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:background="@null"
                    android:contentDescription="@string/close"
                    android:translationZ="10dp"
                    android:paddingTop="@dimen/margin_lg"
                    android:paddingBottom="@dimen/margin_md"
                    android:paddingStart="@dimen/margin_md"
                    android:paddingEnd="@dimen/margin_sm"
                    app:srcCompat="@drawable/ic_baseline_close_24" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xsm"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="6dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_sm"
                        >

                        <LinearLayout
                            android:id="@+id/card_participants_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="@dimen/margin_xsm"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/participants_label"
                                android:textSize="@dimen/text_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/participants" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/card_status_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card_participants_layout">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/trip_status_label"
                                android:textSize="@dimen/text_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:textAllCaps="true"
                                android:text="@string/trip_status" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/creator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/creator_name_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/creator_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:ems="10"
                    android:hint="@string/creator_name"
                    android:inputType="text"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/creator_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/start_address_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/start_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/start_address"
                    android:inputType="textPostalAddress"
                    android:autofillHints="postalAddress"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_address_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/end_address_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/end_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/end_address"
                    android:inputType="textPostalAddress"
                    android:autofillHints="postalAddress" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_datetime_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end_address_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/start_date_label"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/start_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/end_address" />

                    <EditText
                        android:id="@+id/start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:hint="@string/time"
                        android:inputType="time"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/start_date" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_datetime_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_datetime_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/end_date_label"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/end_datetime_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/end_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />

                    <EditText
                        android:id="@+id/end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:hint="@string/time"
                        android:inputType="time"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:layout_constraintLeft_toRightOf="@id/end_date"
                        app:layout_constraintTop_toBottomOf="parent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cost_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end_datetime_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/trip_cost_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/trip_cost"
                    android:inputType="number"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/available_seats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cost_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/availability_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/available_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="@string/available_seats"
                    android:inputType="number"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/send_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_xsm"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/available_seats_layout" />

            <Button
                android:id="@+id/save_dummy_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_xsm"
                android:text="@string/create_dummy_trip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send_bt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/scrollView"
        app:layout_constraintLeft_toLeftOf="@id/scrollView"
        app:layout_constraintRight_toRightOf="@id/scrollView"
        app:layout_constraintTop_toTopOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>